k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-deployment
  labels:
    app: petclinic
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
        - name: petclinic
          image: 414852377253.dkr.ecr.us-west-2.amazonaws.com/demo-otel-operator/petclinic:TAGGYDOOBER
          ports:
            - containerPort: 8080
