k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
spec:
  type: NodePort
  selector:
    app: petclinic
  ports:
    - port: 8080
      targetPort: 8080
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30007
